# AsyncDataProvider

./: .gitignore  .swp  1__main.c  1__main.cpp  CMakeCache.txt  CMakeLists.txt  build.sh  run.sh  test.cpp
DataProvider/: DataCache.hpp  Dispacher.cpp  Dispacher.hpp  InterfaceClient.hpp  Task.hpp  TaskPool.cpp  TaskPool.hpp
VanillaThreads/: vThreads.cpp  vThreads.hpp
cmake/: Ccache.cmake  CodeCoverage.cmake  CompilerWarnings.cmake
doc/: main.tex
doc/Figures/: system_overview.tex
doc/Figures/use_cases/: client_requests_data.tex
inc/: main.hpp
testing_framework/: CMakeLists.txt  test_runner.cpp
vanillaThreads/: CMakeLists.txt
vanillaThreads/include/: DataInterface.hpp
vanillaThreads/src/: DataCache.cpp  DataCache.hpp  DataInterface.cpp  Database.cpp  Database.hpp  Dispatcher.cpp  Dispatcher.hpp  Task.cpp  Task.hpp  TaskPool.cpp  TaskPool.hpp
vanillaThreads/tests/: DataInterface_test.cpp
